--- a/test07.html
+++ b/test07.html
@@ -71,6 +71,7 @@
             <input
                 id = "rgIp"
                 type = "range"
+                <!-- step = "10" -->
                 min = "100"
                 max = "200"
             >
