--- a/test01.html
+++ b/test01.html
@@ -1,4 +1,6 @@
+<!-- 종류와 중요도에 따른 태그 -->
 <!-- 인용문 관련 태그 -->
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -8,12 +10,37 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>강조하기 위한 태그들</h1>
+    <h2>b태그 vs String 태그</h2>
+    <p>
+        <b> 이 요소 </b> 와 <strong>이 요소</strong>는 같아 보이지만 다른 태그입니다. <br>
+        b태그는 글자를 굵게만 만들지만, Strong 태그는 그 내용이 중요하다는 의미 또한 담고 있다. <br>
+        이름이 굵게 보이는 것 또한 브라우저의 기본 설정일 뿐, <br>
+        이러한 디자인 요소는 css로 지정해 한다.
+    </p>
 
-    <h1> 인용문 관련 태그 </h1>
-    <h2> blockquote와 cite 태그 </h2>
-    
-    <abbr title = "Hypertext markup Language">HTML</abbr
-        >을 배워봅시다.
+    <h2> i 태그 vs em 태그</h2>
+    <p>
+        <i>이 요소</i> 와 <em> 이 요소</em> 역시 같아 보이지만 다른 태그입니다. <br>
+        둘다 글자를 기울이지만, i 태그와 달리 em 태그는 강조하는 역할을 한다.<br>
+        글자의 기울임 역시 css로 명시해주는 것이 좋습니다.<br>
+
+    </p>
+
+    <h2> sup vs sub</h2>
+    <p>
+        1<sup>st</sup>, 2<sup>nd</sup>...n<sup>th</sup>,x<sup>n</sup>
+        등 지수나 서수를 위한 위 첨자를 표시할 때는 <br>
+        <string>sup</string> 사용한다.
+    </p>
+
+    <p>
+        Ylco<sub>1</sub>, H<sub>2</sub>0, x<sub>n</suB> 등 각주, 변수 , 화학식을 위한 아래 첨자를 표시할 때는 <br>
+        <strong>sub</strong> 사용한다.
+    </p>
+
+
+
     
 </body>
 </html>
