--- a/test03.html
+++ b/test03.html
@@ -12,6 +12,7 @@
     <!-- 절대 경로 vs 상대 경로 -->
 
     <img src ="images/GettyImages-1069786222.jpg"
+    <!-- alt : 대체제, title : 툴팁 -->
     alt = "코딩"
     title = "프로그래밍"
     width = 300
