--- a/test01.html
+++ b/test01.html
@@ -39,6 +39,52 @@
         <strong>sub</strong> 사용한다.
     </p>
 
+    <h2>u vs s</h2>
+    <p>
+        <Strong>u</Strong> 태그는 과거 <s>밑줄을 긋는 용도</s>로 사용되었으나<br>
+        현재는 <em>css 효과와 함께</em> 철자 오류 등을 강조하는 용도로 <u>사용됩니다.</u>
+        <strong>s</strong> 태그는 더이상 유효하지 않은 정보를 취소선과 함께 나타낸다.
+        
+
+    </p>
+
+
+    <h1>인용문 관련 태그</h1>
+    <h2>blockquote와 cite 태그</h2>
+    <blockquote cite = "https://developer.mozilla.org/ko/docs/Web/HTML/Element/blockquote">
+        <p>
+            HTML &lt;blockquote&gt; 요소는 안쪽의 텍스트가 긴 <mark>인용문</mark> 임을 나타낸다.<br>
+            주로 들여쓰기를 한 것으로 그려진다.<br>
+            인용문의 출처 URL은 cite 특성으로, 출처 텍스트는 &lt;cite&gt; 요소로 제공할 수 있습니다.
+        </p>
+    </blockquote>
+    <cite>&lt;blockquote&gt; 인용 블록 요소</cite> from MDN
+
+    <br><br>
+
+    <h2>짧은 인용문을 위한 q 태그</h2>
+    <p>
+        <strong>q</strong> 태그에 대해 MDN 문서는 
+        <q cite = "https://developer.mozilla.org/ko/docs/Web/HTML/Element/q">
+            HTML &lt;q&gt; 요소는 둘러싼 텍스트가 짧은 <br> 인라인 <mark>인용문</mark>이라는 것을 나타냅니다.
+        </q>
+    </p>
+
+    <h2>mark 태그</h2>
+    <p> 
+        본 페이지는 "<mark>인용문</mark>" 이란 키워드로 검색한 결과입니다. <br>
+        <strong>mark</strong> 태그는 사용자의 행동과 관련 있는 부분 <i>(예: 검색결과)</i>, <br>
+        또는 인용문에서 주시해야 할 부분들을 표시합니다.
+        <img alt = "Spring" src = "https://img.shields.io/badge/Spring-6DB33F.svg?&style=for-the-badge&logo=Spring&logoColor=black"/><br>
+        #232F3E
+        <img alt = "Amazon AWS" src = "https://img.shields.io/badge/Amazon AWS-232F3E.svg?&style=for-the-badge&logo=Amazon AWS&logoColor=black"/><br>
+    </p>
+    <p>
+        mark 태그 역시 css와 병행해서 사용합니다.
+    </p>
+
+
+
 
 
     
