--- a/test02.html
+++ b/test02.html
@@ -1,5 +1,6 @@
 <!-- 나열 -->
 <!-- 순서 필요x : ul, 순서 필요o : ol with li -->
+ <!-- dl,dt,dd : dl , dt : 용어,dd : 의미-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,53 +13,51 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- ul 숫자가 붙지 않음 -->
+
+     <!-- ul : 순서 존재 x -->
+    <h1>수련회 준비물</h1>
     <ul>
         <li>이틀치 옷</li>
         <li>세면 도구</li>
         <li>수건</li>
-        <li>학습 도구 
-           <ul>
-            <li>노트북</li>
-            <li>필기구</li>
-            <li>교재</li>
-           </ul>
+        <li>학습도구
+            <ul>
+                <li>노트북</li>
+                <li>필기구</li>
+                <li>교재</li>
+            </ul>
         </li>
     </ul>
-</body>
 
-<body>
-    <!-- ol / 숫자가 붙음 -->
+    <h1>계란볶음밥 만들기</h1>
     <ol>
-    
-        <li>재료 준비</li>
+        <li>재료 준비
             <ul>
                 <li>밥</li>
                 <li>계란</li>
-                <li>간장</li>
                 <li>파</li>
+                <li>간장</li>
             </ul>
+        </li>
         <li>파를 기름에 볶기</li>
         <li>밥 넣고 볶기</li>
         <li>계란을 넣고 스크램블</li>
         <li>간장을 넣고 마저 볶아 완성</li>
-
-
     </ol>
-</body>
 
-<body>
+
     <dl>
         <dt>프로그래밍</dt>
         <dd>컴퓨터 프로그램을 작성하는 일</dd>
+         
         <dt>넓이</dt>
         <dt>광</dt>
         <dt>면적</dt>
         <dd>일정한 평면에 걸쳐 있는 공간이나 범위의 크기</dd>
+
         <dt>사과</dt>
         <dd>사과나무의 열매</dd>
         <dd>자기의 잘못을 인정하고 용서를 빔</dd>
-
     </dl>
 </body>
 </html>
