--- a/test10.html
+++ b/test10.html
@@ -12,7 +12,7 @@
     
     <form action = "#">
         <label for = "valIp">value</label> <br>
-        <input
+        <inputㅣ
             id = "valIp"
             type = "text"
             value = "지정됨"
