--- a/test11.html
+++ b/test11.html
@@ -9,13 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <!-- textarea -->
-    <textarea name="" 
-    id="" 
-    cols="30"
-    rows="10
-    placeholder = "본문을 입력하세요">최동근입니다.</textarea>
+    <h1>textareat 태그</h1>
+    <label for="message">메세지를 입력하세요</label>
+    <textarea id = "message" cols = "64" rows = "5"></textarea>
 </body>
 
 <body>
