--- a/test04.html
+++ b/test04.html
@@ -15,7 +15,7 @@
     <link rel= "stylesheet" href= "https://showcases.yalco.kr/html-css/01-06/table.css">
     <title>Document</title>
 </head>
-<body>
+<body>ㅣ
 
     <table>
         <caption>1에서 9까지의 숫자들</caption>
@@ -107,6 +107,7 @@
                 <td>1</td>
             </tr>
             <tr>
+                <!-- rowspane : 행을 x 개 합침 -->
                 <td rowspan="3">3</td>
                 <td>1</td>
                 <td>1</td>
