--- a/test05.html
+++ b/test05.html
@@ -10,18 +10,31 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>다른 링크로 이동</h2>
     <!-- a 태그를 이용해서 특정 사이트로 이동 -->
     
-    <!-- <a href="https://www.google.com" target = "_blank">구글로 가기(새 창에서)</a> -->
+    <a href="https://www.google.com" target = "_blank">구글로 가기(새 창에서)</a>
 
-    <!-- <a href="https://www.google.com", =""target = "_blank"> -->
-        <!-- <img  -->
-        <!-- src="images/77238_17805_4923.png" -->
-        <!-- alt="구글 사이트로(새 탭에서)" -->
-        <!-- > -->
-    <!-- </a> -->
+    <a href="https://www.google.com", =""target = "_blank">
+        <img 
+        src="images/77238_17805_4923.png"
+        alt="구글 사이트로(새 탭에서)"
+        >
+    </a>
 
 </body>
+    <h1>Contacts</h1>
+    <address>
+        웹사이트 주소 : <a href = "https://www.daum.net">daum.net</a><br>
+        오피스 : 전산시 개발구 코딩동 123번길 45
+        전화 <a href = "tel:010-9017-6902">010-9017-6902</a><br>
+        이메일 : <a href = "danaver12@daum.net">danaver12@daum.net</a>
+    </address>
+
+
+<body>
+
+
 <body>
 
     
